[gd_scene load_steps=2 format=3 uid="uid://ddfdol63njoas"]

[ext_resource type="Script" path="res://test/test.gd" id="1_k0h31"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 337.0
offset_top = 198.0
offset_right = 783.0
offset_bottom = 490.0
script = ExtResource("1_k0h31")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TextLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OptionsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ContinueButton" to="PanelContainer" method="_on_continue_pressed"]
